# Farnsworth

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_SESSION_CONTEXT.md  COMPARED.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  LICENSE  PROJECT.md  README.md  README_TECHNICAL.md  ROADMAP.md  SETUP.md  SWARM_DIRECTIVE.md  VISION.md  claude_auth.html  claude_desktop_config.json.example  docker-compose.yml  index.js  main.py  mcp_config.json  package-lock.json  package.json  pull_request_template.md  pyproject.toml  requirements.txt  run_web.py  scanner_final_check.txt  scanner_final_check_2.txt  scanner_test_output.txt  scanner_test_output_2.txt  server_patch.py  setup.bat  setup_farnsworth.py  smithery.yaml  start.bat  start.sh  test_output.txt  test_output_2.txt  (+3 more)
.claude/: settings.local.json
.github/: CODE_OF_CONDUCT.md  SECURITY.md
bridge/: index.ts  package.json
configs/: default.yaml  evolution.yaml  models.yaml
core/: evolution.py  swarm.py
docker/: Dockerfile  docker-compose.yml
docs/: API_REFERENCE.md  ARCHITECTURE_DIAGRAMS.md  COMPLETE_FEATURE_INVENTORY.md  COMPLETE_FEATURE_MAP.md  FARNSWORTH_2026_TECH_RESEARCH.md  MARKETING.md  PUBLISH.md  SELF_AWARENESS.md  SETUP_GUIDE.md  TECHNICAL_SPEC.md  USER_GUIDE.md
farnsworth/: __init__.py  client.py
farnsworth.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
farnsworth_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
legacy_archive/: app.py
network/: README.md  bootstrap_node.py
scripts/: autonomous_dev.py  benchmark.py  build_documentation.py  build_documentation_part2.py  build_protected.py  crackedclaw_announcement.py  create_og_image.py  deploy.bat  deploy.sh  download_models.py  epstein_meme_poster.py  grok_fresh_thread.py  grok_monitor.py  hourly_video_memes.py  launch_announcements.py  launch_video_announcement.py  populate_usage_stats.py  post_agi_update.py  post_assimilate_hackathon.py  post_assimilate_x_thread.py  post_dexai.py  post_farns_announcement.py  post_farns_tweet.py  post_farns_v2_announcement.py  post_farns_v2_tweet.py  post_gateway_x_thread.py  post_hackathon_xtweet.py  post_massive_update.py  post_quantum_proof.py  quantum_announcement.py  quantum_proof.py  reply_all_grok.py  reply_grok_animated.py  reply_grok_now.py  scan_staging.py  setup.py  (+27 more)
(+904 files in other folders)
